tests/samples/negative/functions/variadic_argument_count.ax
module variadic_argument_count;

extern c {
    fn printf(format: *const u8, ...) -> i32 @name("printf");
}

fn main() -> i32 {
    return printf();
}
